# rainbox

./: .oxlintrc.json  .prettierignore  AGENTS.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  constants.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  mod.rs  packages.rs
src-tauri/src/models/: config.rs  mod.rs
src-tauri/src/operations/: install.rs  mod.rs
src-tauri/src/services/: diagnostic_service.rs  export_service.rs  manager_service.rs  mod.rs  package_service.rs
src-tauri/src/utils/: checker.rs  error_helper.rs  executor.rs  log_rotation.rs  mod.rs  package_reader.rs  parser.rs  path_helper.rs
src/app/: App.tsx  index.css  main.tsx
src/components/common/: DraggableHeader.tsx  EmptyState.tsx  HighlightText.tsx  PageHeader.tsx  Titlebar.tsx
src/components/feedback/: ErrorToast.tsx  ProgressToast.tsx
src/components/layout/: MainContent.tsx
src/components/ui/: input.tsx  progress.tsx
src/hooks/: useCopyToClipboard.ts  useDiffLoader.ts  useGlobalShortcut.ts  useInitializeApp.ts  useKeyboardNavigation.ts  usePackageInstaller.tsx  usePackageLoader.ts  useResizable.ts  useSkeletonMemory.ts  useWindowDrag.ts
src/i18n/: config.ts
src/i18n/locales/: en.json  zh.json
src/lib/: error-handler.ts  package-icons.tsx
src/stores/: useAppStore.ts  useSettingsStore.ts
src/types/: config.ts  log.ts  package.ts
(+33 files in other folders)
