[package]
name = "rainbox"
version = "0.2.0"
description = "A unified GUI for multiple package managers"
authors = ["shellRaining"]
license = "MIT"
repository = "https://github.com/shellRaining/rainbox"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rainbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
futures = "0.3.31"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
chrono = "0.4"
dirs = "5.0"
